@@ -4,6 +4,7 @@
 
 	all : added `contains` and `keyValueIterator` methods to haxe.ds.ReadOnlyArray
 	display : fixed completion for out-of-bounds argument in a call (#9435)
+	display : fixed "find references" through interfaces (#9470)
 	macro : fixed type intersection syntax in macro reification (#9404)
 	lua : fixed lua code generation without `--main` compilation argument (#9489)
 	php : added an overload signature for `session_set_cookie_params` function (#9507)
